- The model compression algorithm for stacking (Caruana 06) is implemented as method 'compress' in 'makeStackedLearner' to first select models from base learners and then mimic the behaviour with a super learner. The default super learner is neural network.

- new functions
-- getDefaultMeasure
-- getTaskClassLevels
-- getPredictionTruth, getPredictionResponse
-- convertMLBenchObjToTask
-- getBMRLearners, getBMRMeasures, getBMRMeasureIds
-- makeMultilabelTask, makeMultilabelWrapper, getMultilabelBinaryPerformances
-- generatePartialPredictionData, plotPartialPrediction, and plotPartialPredictionGGVIS
-- getClassWeightParam
-- plotBenchmarkResult, convertBMRToRankMatrix, generateRankMatrixAsBarData, plotRankMatrixAsBar,
   generateBenchmarkSummaryData, plotBenchmarkSummary,
   friedmanTestBMR, friedmanPostHocTestBMR, generateCritDifferencesData, plotCritDifferences
-- getCaretParamSet
-- generateCalibrationData and plotCalibration

- new measures
-- hamloss

- new learners
-- multilabel.rFerns
-- classif.avNNet
-- classif.neuralnet
-- regr.avNNet
-- classif.clusterSVM
-- classif.dcSVM
-- classif.gaterSVM
-- classif.mlp
-- classif.saeDNN
-- classif.dbnDNN
-- classif.nnTrain
-- classif.rknn
-- regr.rknn
-- classif.xgboost
-- regr.xgboost

- new filters
-- permutation.importance

- removed functions
-- setProperties, addProperties, removeProperties

mlr_2.4:
- WrappedModel printer was slightly improved
- ReampleResult now stores the runtime it took to resample in a slot
- getTaskFormula / getTaskFormulaAsString have new argument 'explicit.features'
- getTaskData now has recodeY = "drop.levels" which drops empty factor levels
- option fix.factors in makeLearner was renamed to fix.factors.prediction for clarity
- showHyperPars was removed. getParamSet does exactly the same thing
- 'resample' and 'benchmark' got the argument keep.pred,
  setting it to FALSE allows to discard the prediction objects to save memory