@@ -228,6 +228,7 @@ S3method(predictLearner,CostSensClassifWrapper)
 S3method(predictLearner,CostSensRegrWrapper)
 S3method(predictLearner,CostSensWeightedPairsWrapper)
 S3method(predictLearner,FeatSelWrapper)
+S3method(predictLearner,FeatingEnsemble)
 S3method(predictLearner,FilterWrapper)
 S3method(predictLearner,ModelMultiplexer)
 S3method(predictLearner,MulticlassWrapper)
@@ -424,6 +425,7 @@ S3method(trainLearner,CostSensRegrWrapper)
 S3method(trainLearner,CostSensWeightedPairsWrapper)
 S3method(trainLearner,DownsampleWrapper)
 S3method(trainLearner,FeatSelWrapper)
+S3method(trainLearner,FeatingEnsemble)
 S3method(trainLearner,FilterWrapper)
 S3method(trainLearner,ModelMultiplexer)
 S3method(trainLearner,MulticlassWrapper)
@@ -697,6 +699,7 @@ export(makeFeatSelControlGA)
 export(makeFeatSelControlRandom)
 export(makeFeatSelControlSequential)
 export(makeFeatSelWrapper)
+export(makeFeatingEnsemble)
 export(makeFilter)
 export(makeFilterWrapper)
 export(makeFixedHoldoutInstance)
